Add channel's form and fixes

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -6,3 +6,8 @@ sylius:
             enabled: Enabled
             name: Name
             url: URL
+            type: Type
+            types:
+                webiste: Website
+                mobile: Mobile
+                pos: POS
